--- a/doubledot/package.json
+++ b/doubledot/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "babel-preset-env": "^1.7.0",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
