--- a/doubledot/Dockerfile
+++ b/doubledot/Dockerfile
@@ -1,14 +1,19 @@
-FROM python:3.9-slim-bullseye
+FROM python:3.9.6-alpine
 
 WORKDIR /app
 
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-COPY requirements.txt requirements.txt
+RUN apk update \
+    && apk add postgresql-libs postgresql-dev libffi-dev \
+       openldap-dev unixodbc-dev gcc musl-dev python3-dev \
+       jpeg-dev zlib-dev libjpeg
 
-RUN pip install --upgrade pip
+RUN python3 -m pip install --upgrade pip
+COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
+
 
 COPY . /app
 EXPOSE 8000
